Add info about the timestep stuff to the reversing post

--- a/_posts/2022-12-09-reversing-3.md
+++ b/_posts/2022-12-09-reversing-3.md
@@ -29,12 +29,11 @@ So, we need a way to measure the degree of similarity between the original and t
 
 Next, I tried to be smart. I don't really care if the two binaries are identical, just that they do the same thing. So I could run the original in an instrumented emulator (I actually conceived of dostrace as a limited emulator for that purpose, just because the idea of instrumenting DosBox was so unpalatable), record the initial machine state (like the random seed and memory contents), user inputs and program output (say, port and memory writes, which would include the video output since in VGA's mode 13h the framebuffer is seen as memory starting at segment A000). Then, as I went along, I would run my recreation at some ridiculous speed to save time, playing back the exact same inputs and detecting discrepancies in the output (the idea came to me while watching [this video](https://www.youtube.com/watch?v=W20t1zCZv8M)). I would keep fixing the errors until none remained, at which point I would arguably have a Good Enough(tm) implementation.
 
-I actually kept going along with that idea for a while, but the fact that I decided to implement my own 8086 emulator with dostrace, meant there was a heavy buy-in cost to pay at the outset, and I was frustrated by lack of progress on what actually matters most - the game itself. I was tempted to just dive in with the naive approach an hope for the best, but something kept preventing me from doing so. I became unmotivated and bitter about the whole thing.
+I actually kept going along with that idea for a while, but the fact that I decided to implement my own 8086 emulator with dostrace, meant there was a heavy buy-in cost to pay at the outset, and I was frustrated by lack of progress on what actually matters most - the game itself. I was tempted to just dive in with the naive approach an hope for the best, but something kept preventing me from doing so. I became unmotivated about the whole thing. Then I learned that my idea wasn't even [that smart to begin with](https://gafferongames.com/post/fix_your_timestep/). In short, usually a game engine will be implemented with an infinite loop where in the first step you update the physics, e.g. the location of game objects based on their speed given how much time has elapsed from the last update. Afterwards, the next step in the loop is to actually draw (render) the game view based on the updated physics. These actions take an unpredictable amount of time, because the system might experience heavy load and the game's framerate takes a dip. Now, the linked article explains it better than I can, but as far as I understand it, if you take the wrong approach with timing the physics updates in relation to the rendering, you might end up with a game whose behaviour is non-deterministic, and when the framerate dips, the extra-long time delta that goes into the physics update logic will lead to problems such as collisions being missed. Then weird things will start happening, like characters falling through the floor etc. What this means for me, is that I have no guarantees that my game is implemented in a way which guarantees determinism, so it may even not generate the same output when compared with itself, and comparing its output with the recreation makes even less sense, which completely destroyed this entire idea.
 
-Around this time, I was emailing various people who had success with completing their own old game reversing projects, and it was the author of the [Cosmore project](https://github.com/smitelli/cosmore) who described and approach which worked for him that I could see myself adapting. We can still compare the binaries even if they are not identical. Let's say we had a tool which would analyze the machine code, disassembling the opcodes as it went along. Start with the main functions of your recreation and the original, and keep comparing the machine instructions. Obviously, you will encounter differences with regards to the addresses these instructions use to reference data, because that data is in a different location in the two binaries. Ignore the difference, and record the mapping of reconstructed offset->original offset it in a reference dictionary for later. It's just a matter of doing the right thing for different data access patterns - for example, stack-based accesses that refer to local data should have the same offsets, but that's relatively easy to accomplish. Whenever you encounter a function call, push it onto a stack, and go through all the functions in a [BFS](https://en.wikipedia.org/wiki/Breadth-first_search) sort of approach. When you encounter a reference mismatch, you look in the dictionary if a mapping between a reconstructed offset and a original one exists in the dictionary, and if it is the same as encountered before. You could have an ignore list for functions which you want to skip in the comparison for some reason - basically, this approach enables total flexibility in adapting the algorithm to the task.
+Around this time, I was emailing various people who had success with completing their own old game reversing projects, and it was the author of the [Cosmore project](https://github.com/smitelli/cosmore) who described and approach which worked for him that I could see myself adapting. We can still compare the binaries even if they are not identical. Let's say we had a tool which would analyze the machine code, disassembling the opcodes as it went along. Start with the main functions of your recreation and the original, and keep comparing the machine instructions. If you encounter a different instruction, that means there's a discrepancy between the original and the recreation that needs to be fixed. But even if the instructions match, the tool will also encounter differences with regards to the addresses these instructions use to reference data, because that data is located at different locations in the two binaries. Instead of trying to get the locations to match, the tool ignores the difference, and records the mapping of the reconstructed offset onto an original offset in a reference dictionary for later. It's just a matter of doing the right thing for different data access patterns - for example, stack-based accesses that refer to local data should match, but that's relatively easy to accomplish - just declare the stack variables in the same order. Whenever it encounters a function call, push it onto a stack, and go through all the functions in a [BFS](https://en.wikipedia.org/wiki/Breadth-first_search) sort of approach. When it encounters a reference mismatch, it looks in the dictionary if a mapping between a reconstructed offset and a original one exists in the dictionary, and if it is the same as encountered before. You could have an ignore list for functions which you want to skip in the comparison for some reason - basically, this approach enables total flexibility in adapting the algorithm to the task.
 
-Since dostrace already does disassembly, I am currently adapting its code to be able to perform this, shall we say, semantical comparison. It comes at a buy-in initial cost as well, but it's much less than implementing a somewhat full-featured emulator, and it's much more likely to provide a credible metric of similarity between individual functions of the recreation and the original, that can be applied to an iterative process, where I am implementing functions one by one, and getting instant feedback on whether they are correct or not.
+Since dostrace already does disassembly, I am currently adapting its code to be able to perform this, shall we say, semantical comparison. It comes at a buy-in initial cost as well, but it's much less than implementing a somewhat full-featured emulator with state recording, and it's much more likely to provide a credible metric of similarity between individual functions of the recreation and the original, that can be applied to an iterative process, where I am implementing functions one by one, and getting instant feedback on whether they are correct or not.
 
 Whew, this was long, but I needed to have this thought process documented. I don't expect to have more posts like this one about the game - from now on it will be just the technical stuff. ;)
-
 
