Fix post titles

--- a/_posts/2022-12-09-reversing-1.md
+++ b/_posts/2022-12-09-reversing-1.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: What does it take to take an old game apart (Part 1)?
+title: What does it take to take an old game apart? (Part 1)
 category: f15-se2
 ---
 This is a one-off, lengthy post that I decided to write up to summarize the know-how necessary to take a project of this kind, and the tools and methods that can be employed in order to get it done.
