--- a/_posts/2022-12-09-reversing-3.md
+++ b/_posts/2022-12-09-reversing-3.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: What does it take to take an old game apart (Part 3)?
+title: What does it take to take an old game apart? (Part 3)
 category: f15-se2
 ---
 (...continued from [Part 2](/f15-se2/2022/12/09/reversing-1.html))
