--- a/_posts/2022-12-09-reversing-2.md
+++ b/_posts/2022-12-09-reversing-2.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: What does it take to take an old game apart (Part 2)?
+title: What does it take to take an old game apart? (Part 2)
 category: f15-se2
 ---
 (...continued from [Part 1](/f15-se2/2022/12/09/reversing-1.html))
