--- a/_posts/2022-12-09-reversing-3.md
+++ b/_posts/2022-12-09-reversing-3.md
@@ -25,9 +25,11 @@ As a side note, the fact that it is a somewhat mindless process, naturally leads
 
 A problem with the naive approach is that transcribing the code without some method to verify the work along the way takes a long time, where at the end you are guaranteed to have made at least several mistakes that will be hard to find and debug, and you just assume the reimplementation is faithful (that would be the naive part).
 
-So, we need a way to measure the degree of similarity between the original and the recreation. But how to go about it? We could binarily compare the compiled recreation with the original, but obtaining a binarily identical output with the original might be next to impossible - there are just too many variables that can influence the ordering of code and data in a compiled binary: compiler flags, linking order, code order in the input files... It is ideal and some project managed to pull it off, but chasing it may be a pipe dream that could just as well hold a project back. For me, I was unable to make progress for a long time because I used to think aiming for perfect binary-level faithfullness was the only way to go. And yeah, I know that the old compiler I'm working with will not do much code reordering or other optimizations, and that macros exist that allow me to put specific functions in specific segments, but there was just [so much that could go wrong](https://reverseengineering.stackexchange.com/questions/27811/how-to-maintain-function-ordering-in-an-executable-when-replacing-machine-code-w), and the fact that I would need to wait until the very end, when the last piece falls into place before getting the answer "did I do it right?" meant that the risk was unacceptable for me. 
+So, we need a way to measure the degree of similarity between the original and the recreation. But how to go about it? The problem (and part of the reason why I started this journal) is that while there have been many successful reverse engineering projects, the maintainers rarely go into detail about their methods. I found some notes from the [restunts project](https://re.stunts.no/status/) which aims to reverse engineer the old racing game [Stunts](https://en.wikipedia.org/wiki/Stunts_(video_game)), and it looked like those people have some automatic framework for checking the validity of their reimplementation - but I was unable to learn anything more specific about the exact methodology.
 
-Next, I tried to be smart. I don't really care if the two binaries are identical, just that they do the same thing. So I could run the original in an instrumented emulator (I actually conceived of dostrace as a limited emulator for that purpose, just because the idea of instrumenting DosBox was so unpalatable), record the initial machine state (like the random seed and memory contents), user inputs and program output (say, port and memory writes, which would include the video output since in VGA's mode 13h the framebuffer is seen as memory starting at segment A000). Then, as I went along, I would run my recreation at some ridiculous speed to save time, playing back the exact same inputs and detecting discrepancies in the output (the idea came to me while watching [this video](https://www.youtube.com/watch?v=W20t1zCZv8M)). I would keep fixing the errors until none remained, at which point I would arguably have a Good Enough(tm) implementation.
+We could binarily compare the compiled recreation with the original, but obtaining a binarily identical output with the original might be next to impossible - there are just too many variables that can influence the ordering of code and data in a compiled binary: compiler flags, linking order, code order in the input files... It is ideal and [some projects](https://arstechnica.com/gaming/2020/05/beyond-emulation-the-massive-effort-to-reverse-engineer-n64-source-code/) managed to pull it off, but chasing it may be a pipe dream that could just as well hold a project back. For me, I was unable to make progress for a long time because I used to think aiming for perfect binary-level faithfullness was the only way to go. And yeah, I know that the old compiler I'm working with will not do much code reordering or other optimizations, and that macros exist that allow me to put specific functions in specific segments, but there was just [so much that could go wrong](https://reverseengineering.stackexchange.com/questions/27811/how-to-maintain-function-ordering-in-an-executable-when-replacing-machine-code-w), and the fact that I would need to wait until the very end, when the last piece falls into place before getting the answer "did I do it right?" meant that the risk was unacceptable for me. 
+
+Next, I tried to be smart. I don't really care if the two binaries are identical, just that they do the same thing. So I could run the original in an instrumented emulator (I actually conceived of [dostrace](https://github.com/neuviemeporte/dostrace) as a limited emulator for that purpose, just because the idea of instrumenting DosBox was so unpalatable), record the initial machine state (like the random seed and memory contents), user inputs and program output (say, port and memory writes, which would include the video output since in VGA's mode 13h the framebuffer is seen as memory starting at segment A000). Then, as I went along, I would run my recreation at some ridiculous speed to save time, playing back the exact same inputs and detecting discrepancies in the output (the idea came to me while watching [a youtube video](https://youtu.be/kSKeWH4TY9Y?t=2441), where Brian Provinciano was talking about automated testing of his game). I would keep eliminating the errors until none remained, at which point I would arguably have a Good Enough(tm) implementation.
 
 I actually kept going along with that idea for a while, but the fact that I decided to implement my own 8086 emulator with dostrace, meant there was a heavy buy-in cost to pay at the outset, and I was frustrated by lack of progress on what actually matters most - the game itself. I was tempted to just dive in with the naive approach an hope for the best, but something kept preventing me from doing so. I became unmotivated and bitter about the whole thing.
 
