minor fixes to the farcall post

--- a/_posts/2023-03-23-farcalls.md
+++ b/_posts/2023-03-23-farcalls.md
@@ -4,6 +4,8 @@ title: Chasing far calls
 category: f15-se2
 ---
 
+(This is a post on the subject of my hobby project, which is recreating the C source code for the 1989 game [F-15 Strike Eagle II]({% post_url 2022-06-05-origins %}) by reverse engineering the original binaries.)
+
 I recently got the mzdiff tool in [dostrace](https://github.com/neuviemeporte/dostrace) to a point where I can give it one of the game executables and my C reimplementation executable, and it will compare them instruction-by-instruction (allowing for differences in file layout, particularly data and code addresses), so I sat down and started implementing the `main()` function of `START.EXE`, the first actual game exe which shows the title screen, lets you select a pilot, a mission, difficulty level, before showing you the targets and exiting (the actual flight is handled by `EGAME.EXE`). So I'm reviewing the disassembly in IDA and writing my C code based off it, got some instructions to match, which mzdiff helpfully shows, so I'm psyched. Then I hit this instruction:
 
 {% highlight nasm %}
@@ -134,7 +136,7 @@ int main()  {
 }
 {% endhighlight %}
 
-Despite this being somewhat tediuous, I could make it work with some preprocessor mischief thrown in. Unfortunately, the linker decided to put some padding between the individual arrays, so there were null bytes following them. It's weird because the compiler docs say arrays of char are byte aligned, but I was there, I saw it. I could account for the extra byte elsewhere, but what if some day when the exe grows bigger, the compiler will decide to drop the padding? This is not sustainable. Time to get creative.
+This would be tedious, but I could make it work with some preprocessor mischief thrown in. Unfortunately, the linker decided to put some padding between the individual arrays, so there were null bytes following them. It's weird because the compiler docs say arrays of char are byte aligned, but I was there, I saw it. I could account for the extra byte elsewhere, but what if some day when the exe grows bigger, the compiler will decide to drop the padding? This is not sustainable. Time to get creative.
 
 {% highlight cpp %}
 // test.h
@@ -272,4 +274,8 @@ END
 
 Finally, when linked with the rest of the program, this does what I wanted in the very beginning. I just spelled out a bunch of byte values as data in the assembly, exposed them as public symbols, and lied to the compiler that they are really functions. Using assembler lets me control the exact layout so there will not be any alignment padding, and I can have my cookie and eat it, too.
 
-This is just some work that needed to be done to reimplement a single instruction of the game in C. And in the end it even turned out that C was not enough, but I'm okay with a small snippet of assembly that just contains a block of data to be linked with the rest of the recreation code. Well, actually it's not that bad because there will be many places in the code where overlays will get called, and doing this up front lets me cover all those easily. I just thought it was interesting to show how much work goes into figuring minute stuff like this out, before transcribing the game disassembly into C becomes an almost mechanical task. I'm not at that point yet, but I'm excited for what will come next.
+This is just some work that needed to be done to reimplement a single instruction of the game in C. And in the end it even turned out that C was not enough, but I'm okay with a small snippet of assembly that just contains a block of data to be linked with the rest of the recreation code. Well, actually it's not that bad because there will be many places in the code where overlays will get called, and doing this up front lets me cover all those easily. I just thought it was interesting to show how much work goes into figuring minute stuff like this out, before transcribing the game disassembly into C becomes an almost mechanical task. I'm not at that point yet, but I'm excited for what will come next. 
+
+An aspect of doing in-depth analysis of the code in this way, that I did not expect, is that one can't help but imagine what went through the head of the person who wrote this code over 30 years ago. I'm betting some of the same thoughts went through their head. Should I copy-paste these functions, or should I make a macro? How best to reuse the code that will be shared between the multiple binaries? What kind of compiler and linker options do I use? It is kind of like going back in time and being there with the programmer as they are figuring out how to make this game work, and is part of why this project fascinates me so much.
+
+You are an interesting man to not know, Mr. Hollis.
