tweaks to the farcalls chase post

--- a/_posts/2023-03-23-farcalls.md
+++ b/_posts/2023-03-23-farcalls.md
@@ -197,7 +197,7 @@ The addresses are 5 bytes apart like expected when calculated, but when actually
 This means however that I exhausted the possibilities that C in general and the compiler in particular let me accomplish. For getting the exact memory layout that I want, I'm going to need to go into assembly. I was considering it as soon as I hit that first roadblock, because that data-is-code idiom smells of somebody having coded a part of it in assembly, but I was hoping it could be accomplished from C, and abusing the compiler was really fun while it lasted. But now I need to take out the big boys' toys. I extended my DOS build script to support [MASM 5.10](https://en.wikipedia.org/wiki/Microsoft_Macro_Assembler), and made this:
 
 {% highlight nasm %}
-; the underscores are an interesting feature of the C compiler which will add them
+; the underscores are an interesting feature of the MS C compiler which will add them
 ; to all global symbols under the hood, so these would not have been found at link time
 ; without an underscore, despite being known by their _-less names in C code
 PUBLIC _function1, _function2, _function3
@@ -238,6 +238,7 @@ END
 {% endhighlight %}
 
 Then I just need a header file to call these from C:
+
 {% highlight cpp %}
 // test.h
 // remember, the underscore is implicit
@@ -272,9 +273,89 @@ _function3 db 0EAh
 END
 {% endhighlight %}
 
-Finally, when linked with the rest of the program, this does what I wanted in the very beginning. I just spelled out a bunch of byte values as data in the assembly, exposed them as public symbols, and lied to the compiler that they are really functions. Using assembler lets me control the exact layout so there will not be any alignment padding, and I can have my cookie and eat it, too.
+Finally, when linked with the rest of the program, this does what I wanted in the very beginning. I just spelled out a bunch of byte values as data in the assembly, exposed them as public symbols, and lied to the compiler that they are really functions. Using assembler lets me control the exact layout so there will not be any alignment padding, and I can have my cookie and eat it, too. 
 
-This is just some work that needed to be done to reimplement a single instruction of the game in C. And in the end it even turned out that C was not enough, but I'm okay with a small snippet of assembly that just contains a block of data to be linked with the rest of the recreation code. Well, actually it's not that bad because there will be many places in the code where overlays will get called, and doing this up front lets me cover all those easily. I just thought it was interesting to show how much work goes into figuring minute stuff like this out, before transcribing the game disassembly into C becomes an almost mechanical task. I'm not at that point yet, but I'm excited for what will come next. 
+So everything is well and good, time to move on, right? Right? Well of course not! The far call is there, but I am missing the subsequent `add sp, 0x4` instruction which takes the arguments off the stack after the far call is done. This is the C code:
+
+{% highlight cpp %}
+// overlay.h
+int far gfx_overlay_4b(); 
+
+// start.c
+uint8 hercFlag; // hercules mode
+int main() {
+    // [...]
+    // the far call to the overlay that does not generate the stack cleanup
+    gfx_overlay_4b(*FARADDR_PTR_OFF(uint16, commAddr, COMM_GFXINIT_RESULT_OFFSET), 2);
+    // next line is a load from memory into a global variable
+    hercFlag = *FARADDR_PTR_OFF(uint8, commAddr, COMM_SETUP_MONOCHROME_OFFSET);
+
+    // the rest of the recreation of main() is not done yet...
+
+    return 0;
+}
+{% endhighlight %}
+
+...and here is the comparison of the generated assembly (on the right) with the original game exe's instructions (on the left). I am using my tool (mzdiff) from dostrace to compare the binaries, the '==' mark means an exact instruction match, '~=' or '=~' mean an inexact match with a difference in either the left or the right operand, and '!=' is of course a mismatch which interrupts the tool, telling me that I need to fix a mistake.
+
+{% highlight console %}
+ninja@dell:eaglestrike$ make verify
+cl /c /Gs  /Foe:\start.obj f15-se2\start.c
+link /M  start.obj slot.obj,d:\start.exe,,,
+../dostrace/debug/mzdiff ida/start.exe:10 build-f15-se2/start.exe:10 --verbose --loose --sdiff 1 --map map/start.map
+Comparing code between reference (entrypoint 1000:0010/010010) and other (entrypoint 1000:0010/010010) executables
+Reference location @1000:0010/010010, routine 1000:0010-1000:0482/000473: main, block 010010-010482/000473, other @1000:0010/010010
+1000:0010/010010: push bp                          == 1000:0010/010010: push bp
+1000:0011/010011: mov bp, sp                       == 1000:0011/010011: mov bp, sp
+1000:0013/010013: sub sp, 0x1c                     =~ 1000:0013/010013: sub sp, 0xe
+[...]
+1000:0081/010081: mov ax, 0x2                      == 1000:0080/010080: mov ax, 0x2 
+1000:0084/010084: push ax                          == 1000:0083/010083: push ax 🟢 second function argument pushed onto stack
+1000:0085/010085: les bx, [0x77f2]                 =~ 1000:0084/010084: les bx, [0x3fc] 
+1000:0089/010089: push es:[bx+0x20]                == 1000:0088/010088: push es:[bx+0x20] 🟢 likewise for first argument
+1000:008d/01008d: call far 0x16b50c2f              ~= 1000:008c/01008c: call far 0x105b01b9 🟢 far call into the data segment
+1000:0092/010092: add sp, 0x4                      != 1000:0091/010091: les bx, [0x3fc] 🔴 no stack cleanup! wtf?
+ERROR: Instruction mismatch in routine main at 1000:0092/010092: add sp, 0x4 != 1000:0091/010091: les bx, [0x3fc]
+make: *** [Makefile:66: verify-start] Error 1
+{% endhighlight %}
+
+There are different function [calling conventions](https://en.wikipedia.org/wiki/X86_calling_conventions#cdecl), which stipulate who (caller or callee) is supposed to clean up the stack, and the MS C functions use the `cdecl` conventions which mean the caller is supposed to clean up, but the compiler also supports the `pascal` and `fortran` conventions. Maybe I need to specify `cdecl` explicitly on the function prototype?
+
+{% highlight cpp %}
+// overlay.h
+int far cdecl gfx_overlay_4b();
+{% endhighlight %}
+
+It took an evening of deep thought, but finally I figured it out. Bottom line, the declaration in the header file does not matter. I tried adding the argument types explicitly, removed the return type, tried switching the order of the `far` and `cdecl` specifiers. It turns out that the compiler is just lazy, and it will not emit an instruction to do stack cleanup if that's the last call in the file - why bother? So it's just a matter of adding a dummy call to another function in the C source for the comparison to pass, to be removed later.
+
+{% highlight cpp %}
+int main() {
+    // [...]
+    gfx_overlay_4b(*FARADDR_PTR_OFF(uint16, commAddr, COMM_GFXINIT_RESULT_OFFSET), 2);
+    hercFlag = *FARADDR_PTR_OFF(uint8, commAddr, COMM_SETUP_MONOCHROME_OFFSET);
+
+    // XXX: force emit of stack cleanup for last function, 
+    // remove after main() recreation is complete
+    dummy_function();
+
+    return 0;
+}
+{% endhighlight %}
+
+And now it finally fits:
+
+{% highlight console %}
+ninja@dell:eaglestrike$ make verify
+[...]
+1000:0081/010081: mov ax, 0x2                      == 1000:0081/010081: mov ax, 0x2
+1000:0084/010084: push ax                          == 1000:0084/010084: push ax
+1000:0085/010085: les bx, [0x77f2]                 =~ 1000:0085/010085: les bx, [0x3fc]
+1000:0089/010089: push es:[bx+0x20]                == 1000:0089/010089: push es:[bx+0x20]
+1000:008d/01008d: call far 0x16b50c2f              ~= 1000:008d/01008d: call far 0x105c01b9
+1000:0092/010092: add sp, 0x4                      == 1000:0092/010092: add sp, 0x4 🟢 hooray!
+{% endhighlight %}
+
+This is just some work that needed to be done to reimplement a couple of instructions of the game in C. And in the end it even turned out that C was not enough, but I'm okay with a small snippet of assembly that just contains a block of data to be linked with the rest of the recreation code. Actually it's not that bad, because there will be many places in the code where overlays will get called, and doing this research up front lets me cover all those easily. I just thought it was interesting to show how much work goes into figuring minute stuff like this out, before transcribing the game disassembly into C becomes an almost mechanical task. I'm not at that point yet, but I'm excited for what will come next. 
 
 An aspect of doing in-depth analysis of the code in this way, that I did not expect, is that one can't help but imagine what went through the head of the person who wrote this code over 30 years ago. I'm betting some of the same thoughts went through their head. Should I copy-paste these functions, or should I make a macro? How best to reuse the code that will be shared between the multiple binaries? What kind of compiler and linker options do I use? It is kind of like going back in time and being there with the programmer as they are figuring out how to make this game work, and is part of why this project fascinates me so much.
 
