--- a/_posts/2022-12-09-reversing-2.md
+++ b/_posts/2022-12-09-reversing-2.md
@@ -19,13 +19,13 @@ The sound and video hardware were usually separate cards inserted into the mainb
 
 A benefit of doing this kind of project in Modern Times(tm) is that we have access to all kinds of spiffy programming tools, and multitasking graphical environments that were not available back in the 80s. Heck, I can even run more than one program at once! That being said, the most important tools are also kind of crusty:
 
-__DosBox__: I have a love-hate relationship with it. On the one hand, I need some way of running the game, both in the original as well as the reconstructed version, and DosBox emulates a x86 PC running DOS brilliantly for the purpose of running games. On the other, its development has been stagnat around version 0.74 since forever, it's based on an [ancient version](https://www.libsdl.org/download-1.2.php) of the SDL library which makes it problematic to run on modern hardware (toggle the display to fullscreen and try to guess which monitor it will jump to), it has many annoying bugs especially around input and its mapping, configuring it is a nightmare (I dare you to try to get your game running in the resolution and aspect ratio you want), and the community and especially the developers are a bunch of... not very nice people. ;) Luckily, a brave and beautiful soul has [forked it](https://github.com/schellingb/dosbox-pure) to adapt it to modern systems, but because it's a RetroArch core and not a standalone program, it means it has limited potential as a reverse-engineering tool (great for actually playing the games though). So, I'm sticking with DosBox, and particularly the debug version of it which provides an extra window where you can step through the game code, view the CPU registers and memory contents, place breakpoints etc. - pretty much everything that's needed, so I'm almost not mad at how much it sucks anymore. Almost.
+__DosBox__: I have a love-hate relationship with it. On the one hand, I need some way of running the game, both in the original as well as the reconstructed version, and DosBox emulates a x86 PC running DOS brilliantly for the purpose of running games. On the other, its development has been stagnant around version 0.74 since forever, it's based on an [ancient version](https://www.libsdl.org/download-1.2.php) of the SDL library which makes it problematic to run on modern hardware (toggle the display to fullscreen and try to guess which monitor it will jump to), it has many annoying bugs especially around input and its mapping, configuring it is a nightmare (I dare you to try to get your game running in the resolution and aspect ratio you want), and the community and especially the developers are a bunch of... not very nice people. ;) Luckily, a brave and beautiful soul has [forked it](https://github.com/schellingb/dosbox-pure) to adapt it to modern systems, but because it's a RetroArch core and not a standalone program, it means it has limited potential as a reverse-engineering tool (great for actually playing the games though). So, I'm sticking with DosBox, and particularly the debug version of it which provides an extra window where you can step through the game code, view the CPU registers and memory contents, place breakpoints etc. - pretty much everything that's needed, so I'm almost not mad at how much it sucks anymore. Almost.
 
-__IDA__: Interactive Disassembler has long been the go-to tool for software forensics, and many successful reverse engineering projects have been completed with its aid. It has more features and supports more platforms than I can count, but for working with DOS binaries, the ancient 5.0 version is supposed to be optimal (I think the vendor dropped DOS support in later versions). It is also nice that they provide a [freeware download hosted by the ScummVM project](https://www.scummvm.org/news/20180331/) of that version, since a commercial license of IDA costs something like 5 Million $$$ (or so I'm told). The interface is super crusty and the interface looks as daunting as the cockpit of a space shuttle, but it sure beats working from raw disassembly text once you get the hang of it. IDA is an "interactive" disassembler, which means you load your binary into it, then it analyzes it and spits out dissassembly that is annotated with details that it was able to discern from the code - function boundaries are discovered if possible, stack frame layout might be discovered, code and data segments are separated and (auto-generated) labels placed on referenced locations. You then go through the disassembly and based on what you learn, you assign meaningful names to functions and data, reorder stuff around (with IDA making sure everything stays consistent) etc. and as you do that, your changes propagate throughout the disassembly, so if you discover what a variable referenced in one place is for in one function and rename it to reflect that fact, it will be visible under that name in all other functions, so you kind of keep filling in the blanks to form the full picture, kind of like solving a crossword puzzle, where letters from some words help you out in figuring out other ones. 
+__IDA__: Interactive Disassembler has long been the go-to tool for software forensics, and many successful reverse engineering projects have been completed with its aid. It has more features and supports more platforms than I can count, but for working with DOS binaries, the ancient 5.0 version is supposed to be optimal (I think the vendor dropped DOS support in later versions). It is also nice that they provide a [freeware download hosted by the ScummVM project](https://www.scummvm.org/news/20180331/) of that version, since a commercial license of IDA costs something like 5 Million $$$ (or so I'm told). The interface is super crusty and it looks as daunting as the cockpit of a space shuttle, but it sure beats working from raw disassembly text once you get the hang of it. IDA is an "interactive" disassembler, which means you load your binary into it, then it analyzes it and spits out dissassembly that is annotated with details that it was able to discern from the code - function boundaries are discovered if possible, stack frame layout might be discovered, code and data segments are separated and (auto-generated) labels placed on referenced locations. You then go through the disassembly and based on what you learn, you assign meaningful names to functions and data, reorder stuff around (with IDA making sure everything stays consistent) etc. and as you do that, your changes propagate throughout the disassembly, so if you discover what a variable referenced in one place is for in one function and rename it to reflect that fact, it will be visible under that name in all other functions, so you kind of keep filling in the blanks to form the full picture, kind of like solving a crossword puzzle, where letters from some words help you out in figuring out other ones. 
 
 __compiler__: As explained in a different post, F15 SE2 is written in Microsoft C 5.0/5.1, so it's beneficial to use the same compiler for the recreation (althogh not strictly necessary).
 
-__misc. others__: an unpacker for compressed EXEs, a hex editor, a calculator or a Python prompt for calculating offsets and such, a good code editor and such other nonsense.
+__misc. others__: an unpacker for compressed EXEs, a hex editor, a calculator or a Python prompt for calculating offsets and such, a good code editor and other such nonsense.
 
 __dostrace__: for reasons explained later, I decided to [write my own tool](https://github.com/neuviemeporte/dostrace) for analyzing DOS executables. It is still a work in progress and doesn't do much, but I'm hoping to get it to a place where it can be useful in reversing other games than the one I'm working on.
 
