add code style post

--- a/_posts/2023-03-23-farcalls.md
+++ b/_posts/2023-03-23-farcalls.md
@@ -359,4 +359,4 @@ This is just some work that needed to be done to reimplement a couple of instruc
 
 An aspect of doing in-depth analysis of the code in this way, that I did not expect, is that one can't help but imagine what went through the head of the person who wrote this code over 30 years ago. I'm betting some of the same thoughts went through their head. Should I copy-paste these functions, or should I make a macro? How best to reuse the code that will be shared between the multiple binaries? What kind of compiler and linker options do I use? It is kind of like going back in time and being there with the programmer as they are figuring out how to make this game work, and is part of why this project fascinates me so much.
 
-You are an interesting man to not know, Mr. Hollis.
+You are an interesting man to not know, [Mr. Hollis](https://en.wikipedia.org/wiki/Andy_Hollis).
