clarifications in compiler post

--- a/_posts/2023-05-17-compiler.md
+++ b/_posts/2023-05-17-compiler.md
@@ -20,11 +20,13 @@ The 1988 date tells me that this executable was linked with the version of the l
 So it's finally time to get started on the reconstruction. I have obtained a copy of MS C 5.1 and studied its user guide. The workflow I came up with is as follows:
 
 1. Look at the original game's instructions in IDA, starting from the `main()` function.
-2. Figure out what they do and write the equivalent C code in an editor.
+2. Figure out what they do and write the equivalent C code in an editor. 
 3. Compile the reconstructed code with the MS C 5.1 compiler under DOS
 4. Disassemble the compiled binary and compare the instructions to the original ones
-5. If the instructions don't match, go back to 2) and tweak the code
-6. If the instructions do match, give myself a pat on the back and move onto the next instructions in #1, repeating for all the functions in the binary until everything is covered and matching.
+5. If the instructions don't match, go back to #2 and tweak the code
+6. If the instructions do match, give myself a pat on the back and move onto the next instructions in #1
+
+The process is repeated for all the functions in the binary until everything is covered and matching. The code does not need to be very pretty or even understandable at this point - getting too deep into the details and trying to figure out too much about the actual intent of the code is adding more complexity to an already difficult task. Research and clarification will be easier later when the code is complete and can be instrumented with logging or run under a symbollic debugger. It's a matter of preference, but I think dummy function and variable names (e.g. `unknown_123`) are fine at this stage. Of course, if something is pretty evident even at this stage, I go ahead and name it properly (e.g. `timerInterruptRoutine`). No point in discovering the same thing twice.
 
 Besides the main challenge of doing the reconstruction, there are two technical problems with this process. 
 
@@ -69,7 +71,9 @@ This second problem actually took me almost two months to (mostly) solve to my s
 
 The tool shows the instructions of the reference executable on the left, the compared executable on the right, and it displays `==` for ones that match perfectly, `~=` and `=~` for ones that differed in the first or second operand respectively, and of course `!=` for a mismatch, which is also helpfully highlighted in red. 
 
-Thus armed, I can actually start working on the game using the described workflow. Let's look at the game's opcodes from the top of `main()` in `START.EXE`:
+Actually, let me also explain about my expectations as to obtaining an "identical" executable. I do not care if the binary is byte-for-byte binarily identical. It might be nice to achieve as a sort of cherry on top once the code is nice, but for now I do not also care about whether the data segment layout matches the original exactly, same for the functions. I only want all the code and data to be there, and be doing the same thing. I think focusing on 100% accuracy is detrimental to making progress, and the tool lets me focus on the instructions and hides everything else. It means there is a slight chance I can still make mistakes, but I'm willing to live with that, and happily leave sorting it out for later. Divide and conquer, and never bite off more than I can chew.
+
+Anyway, thus armed, I can actually start working on the game using the described workflow. Let's look at the game's opcodes from the top of `main()` in `START.EXE`:
 
 {% highlight nasm %}
 00000010  55                push bp
@@ -184,7 +188,7 @@ ERROR: Instruction mismatch in routine main at 1000:011a/01011a: jmp short 0x11e
 1000:011e/01011e: cmp byte [0x76e], 0x78           != 1000:0121/010121: call far 0x11c101ed
 ```
 
-The compiler eliminates the superfluous intermediate jump to `0x11c` which jumps back up to `0x105` to continue with the next iteration of the loop and just jumps directly to `0x105` because that's more efficient. The end result is the same. But the comparison is off and I was aiming for perfection!
+The compiler eliminates the superfluous intermediate jump to `0x11c` which jumps back up to `0x105` to continue with the next iteration of the loop and just jumps directly to `0x105` because that's more efficient. The end result is the same. But the comparison is off and I was aiming for perfection! Worse still, it throws off my tool that I spent two months creating and I'll be damned before I give up and revert to manual diffing. 😉
 
 I will spare the reader the details of the number of equivalent variants of this loop that I developed. No matter what I try, pretty much an identical sequence of instructions is emitted that does not match the original. In short, none of the following worked, the compiler is too smart:
 
@@ -197,19 +201,19 @@ Wait, the compiler has some optimization options. Surely tweaking them will get 
 
 ![msc_options](/images/msc_options.png){: .center-image }
 
-Until now, I've been compiling without any options, which is equivalent to `/Ot` - optimize for speed. I've tried all of the other options. Actually, I ended up writing a Python script to generate all the combinations of these options (ones that made sense, because some are mutually exclusive) and ran my build + comparison for each combination - and for each variant of the loop C code that I could think of. I thought that was pretty smart of me. Well, no dice, nothing fits. In short, `/Od` makes the loops unoptimized far too much, they have a bunch of additional jumps, but they are the wrong jumps, and everything everywhere else broke anyway. Other than that, all of the other options don't seem to make a difference in the way the loop is compiled.
+Until now, I've been compiling without any options, which is equivalent to `/Ot` - optimize for speed. So I try all of the other options. Actually, I ended up writing a brute force Python script to generate all the combinations of these options (ones that made sense, because some are mutually exclusive) and ran my build + comparison for each combination - and for each variant of the loop C code that I could think of. I thought that was pretty smart of me, but the compiler was smarter. In short, `/Od` makes the loops unoptimized far too much, they have a bunch of additional jumps, but they are the wrong jumps, and everything everywhere else broke anyway. Other than that, all of the other options don't seem to make a difference in the way the loop is compiled.
 
-The compiler supports a `#pragma loop_opt(on|off)` which can be placed before a function and tells it that all loops inside that function should be optimized (or not). It should amount to a more fine-grained `/Ol`, but perhaps it makes a difference. No, of course it doesn't. Somebody [please help](https://retrocomputing.stackexchange.com/questions/26758/how-can-i-make-the-microsoft-c-compiler-for-dos-emit-a-loop-with-an-intermediate)?
+The compiler supports a `#pragma loop_opt(on|off)` which can be placed before a function and tells it that all loops inside that function should be optimized (or not). It should amount to a more fine-grained `/Ol` which I tried already, but perhaps it makes a difference? No, of course it doesn't. Somebody [please help](https://retrocomputing.stackexchange.com/questions/26758/how-can-i-make-the-microsoft-c-compiler-for-dos-emit-a-loop-with-an-intermediate)?
 
 An another possibility is that the code for this loop was not actually written in C but inline assembly. But MS C 5.1 does not support inline assembly.
 
 Well, maybe it was written as a separate inline function in assembly, then linked and placed inline that way? Again, MS C 5.1 does not support inline functions. It supports something it calls "intrinsic functions" (enabled with `/Oi`) which are pretty much inline functions, but it only applies to a pre-determined subset of functions (`memset()`, `strcpy()`, `inp()`, some math functions...) from the standard library - you can either elect to have them expanded inline for performance, or keep them as regular functions. To my knowledge, there is no way to make an arbitrary function "intrinsic".
 
-Damnit. It's not the right compiler. This one is too good at optimizing. We need a worse one. Or at least one which lets me control the optimizations more finely - which I guess would make it better? 
+Damnit. It's not the right compiler. This one is too good at optimizing. We need a worse one. Or at least one which lets me control the optimizations more finely - which I guess would mean it's actually better? No, no philosophizing! Bad kitty! 😉
 
-Well, maybe they used an older version of MS C? I can't fathom why, since they obviously have the library from MS C 5.1, so they also have the compiler available. But maybe this was a different developer than the one that linked it together and they had an older version on their PC? Well, no point in guessing, the only way to know for sure is to try. I extended my build script and the Makefile to support using different toolchains and hide the differences between them.
+Well, maybe they used an older version of MS C? I can't fathom why, since they obviously have the library from MS C 5.1, so they also have the compiler available. But maybe this was compiled by a different developer than the one that linked it together at the end, and they had an older version on their PC? Well, no point in guessing, the only way to know for sure is to try. I extended my build script and the Makefile to support using different toolchains and abstract the differences between them so I can try multiple toolchain and flag combinations easily and quickly. The Python bruteforcing script again gets its fair share of use.
 
-Trying MS C 5.0 required me to get rid of the fancy, "modern" `//` comments in favour of the `/* ... */` ones. For all the work that took, it behaved exactly the same. 
+Trying MS C 5.0 required me to get rid of the fancy, "modern" (for 1988) `//` comments in favour of the `/* ... */` ones. For all the work that took, it treated the loop exactly the same as 5.1. 
 
 Using MS C 4.0 was more challenging still - no argument names in function prototypes supported, function arguments and variables had to be declared in the ancient, pre-ANSI K&R style, before the initial brace. I had to introduce some `#ifdef`s all over to get the code to compile. It supports less optimization options (`/Otsad`), but it still behaves the same in regard to the loop code. 
 
@@ -219,13 +223,14 @@ Older versions of the MS C compiler are barely functional, and this doesn't seem
 
 ![submarines](/images/submarines.jpg){: .center-image }
 
-Borland was selling a C compiler called Turbo C. It boasted faster compilation times than the competition (hence the Turbo moniker), and supported fancy features like inline assembly, and advertised its MS C interoperability. In 1990, they released Turbo C++ and the C compiler was folded into that and the standalone Turbo C discontinued. Then in 1991, Borland C++ was released which was aimed at the professional market, while the idea was for Turbo C++ to keep catering to the needs of hobbyists.
+Borland was selling a C compiler called Turbo C in the mid-to-late 80s. It boasted faster compilation times than the competition (hence the Turbo moniker), supported fancy features like inline assembly, and advertised its MS C interoperability. In 1990, when they released Turbo C++, the C compiler was folded into that and the standalone Turbo C discontinued. Then in 1991, Borland C++ was released which was aimed at the professional market, while the idea was for Turbo C++ to keep catering to the needs of hobbyists.
 
 The game's 1989 release date means that the following Borland compilers are on the table:
 
 - Turbo C 1.0 (1987)
 - Turbo C 1.5 (1988)
 - Turbo C 2.0 (1988)
-- Turbo C 2.01 (1989)
+- Turbo C 2.01 (1989, stretching it)
 
-But the story of that investigation is going to have to wait for Part 2.
+...but the story of that investigation is going to have to wait for Part 2. 
+
