part 2 of the compiler post

--- a/_posts/2023-05-17-compiler.md
+++ b/_posts/2023-05-17-compiler.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Hunting for the Right Compiler
+title: Hunting for the Right Compiler, Part 1
 category: f15-se2
 ---
 
@@ -223,7 +223,9 @@ Older versions of the MS C compiler are barely functional, and this doesn't seem
 
 ![submarines](/images/submarines.jpg){: .center-image }
 
-Borland was selling a C compiler called Turbo C in the mid-to-late 80s. It boasted faster compilation times than the competition (hence the Turbo moniker), supported fancy features like inline assembly, and advertised its MS C interoperability. In 1990, when they released Turbo C++, the C compiler was folded into that and the standalone Turbo C discontinued. Then in 1991, Borland C++ was released which was aimed at the professional market, while the idea was for Turbo C++ to keep catering to the needs of hobbyists.
+Borland was selling a C compiler called Turbo C in the mid-to-late 80s. It boasted faster compilation times than the competition (hence the Turbo moniker), supported fancy features like inline assembly, and advertised its MS C interoperability. In 1990, when they released Turbo C++, the C compiler was folded into that and the standalone Turbo C discontinued. Then in 1991, Borland C++ was released which was aimed at the professional market, while the idea was for Turbo C++ to keep catering to the needs of hobbyists. 
+
+I know that the game has a MSC copyright notice inside, but I guess it's possible the C code was compiled with Borland by one developer who had it installed on their PC, and then somebody else made some tweaks in the assembly code (the executable contains some functions that are clearly manually coded in assembly in another code segment) and linked the object files with the MS C library for release. Computers were slow back then and compiling took time. Why bother recompiling the source code, or maybe the person doing the linking didn't even have the source code, just the object files? There are many possible things that could have happened.
 
 The game's 1989 release date means that the following Borland compilers are on the table:
 
@@ -232,5 +234,4 @@ The game's 1989 release date means that the following Borland compilers are on t
 - Turbo C 2.0 (1988)
 - Turbo C 2.01 (1989, stretching it)
 
-...but the story of that investigation is going to have to wait for Part 2. 
-
+...but the story of that investigation is going to have to wait for [Part 2]({% post_url 2023-05-18-compiler2 %}).
